clusters/beelink-talos/portfolio/portfolio-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enhanced-portfolio-tailscale
  namespace: portfolio
spec:
  ingressClassName: tailscale

  defaultBackend:
    service:
      name: enhanced-portfolio
      port:
        number: 80

  tls:
    - hosts:
        - portfolio
